[x] fix bug 1102, where mobile devices users can not copy urls from inputs
[x] fix bug:1134, where you can download files without waiting using imgf links (reported by: 2mka)
[x] fix bug:1121, where kleeja web site links are wrong (reported by: yasorno)
[x] fix bug:1120, where editing ACLs doesn't work .. (reported by: sadiq6210)

1.5.4 - version:
[x] When the database old, tell the user to update.
[x] fix bug in ACP where secondary menu not appear
[x] add link to user folder at do.php?id=.. page
 

1.5.3 - version : 
[x] add turkish language.
[x] disable ajax by default at ACP ( you can add AJAX_ACP in config.php to turn ajax on )
[x] some style improvments at ACP 
[x] hide un-important items from ACP menu and add a button to show them.
[x] fix problems with login + captcha that's appeared at 1.5.2


1.5.2 - version : 
[x] Add Persian language (thanx for dverbame)
[x] Fix bug with thumbs size (reported by : Tony Broomfield)
[x] fix bug where Last visit in ACP doesnt use Kleeja zone (reborted by: Bader_vip)
[x] fix bug where total files number excludes images (reborted by: Bader_vip)
[x] fix bug where guests can not access user folders, ucp.php?go=fileuser&id=[userid] (reported by: ibragate)
[x] fix bug where kleeja doesnt respect decoding type when it set to nothing (reported by: althani)
[x] fix security issue .. 
[x] Username at registering now should be between 4 to 25 characters (reported by ibragate)
[x] fix bug where user can not open other page while uploading files (reported by gulfup.com)
[x] faster home page with new improved javascript tabs
[x] Juqery.js library is included offically with Kleeja now
[x] fix bug when there is no file and request thumbf=..., it shows txt error instead of image error.
[x] good look of images at userfile while loading instead of just white spaces. 
[x] return back to "mysql_real_escape_string, (reported by twitter/Abdullah_says)

1.5.1 - version : 
[x] Fix bug with uploading from URL.